// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button should render as danger button 1`] = `
<body>
  <div>
    <button
      class="undefined py-1.5 shadow-sm font-semibold text-sm border px-4 rounded-md dark:shadow-md border-red-600 bg-red-500 text-white hover:bg-red-600 hover:border-red-700 dark:bg-red-700 dark:hover:bg-red-600 dark:hover:border-red-500"
      type="button"
    >
      button
    </button>
  </div>
</body>
`;

exports[`Button should render as secondary by default 1`] = `
<body>
  <div>
    <button
      class="undefined py-1.5 shadow-sm font-semibold text-sm border px-4 rounded-md dark:shadow-md border-zinc-300 bg-zinc-50 hover:bg-zinc-100 text-zinc-800 dark:bg-zinc-700 dark:text-zinc-300 dark:border-zinc-600 dark:hover:bg-zinc-600 dark:hover:border-zinc-500"
      type="button"
    >
      button
    </button>
  </div>
</body>
`;
